--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,8 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background: url('your-background-image.gif') no-repeat center center fixed;
+    background: url('/FacedGod Assets/facedgodasset1.jpeg
+') no-repeat center center fixed;
     background-size: cover;
     overflow: hidden;
 }
