--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ h1 {
     font-size: 3em;
     margin-bottom: 20px;
     color: #333;
-    margin-left: 20px;
+    padding-left: 20px;
 }
 p {
     font-size: 1.2em;
