--- a/styles.css
+++ b/styles.css
@@ -6,30 +6,26 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background: url('FaceGod Assets/facegodasset1.jpeg') no-repeat center center fixed;
-    background-size: cover;
-    overflow: hidden;
+    background-color: #f0f0f0;
+    text-align: center;
 }
-
 .container {
     background-color: #fff;
     padding: 50px;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-    display: flex;
 }
-
 h1 {
     font-size: 3em;
     margin-bottom: 20px;
     color: #333;
-    padding-left: 500; /* Removed the padding to avoid shifting */
-    text-align: center; /* Centers the text horizontally */
 }
-
 p {
     font-size: 1.2em;
+    color: #666;
+    margin-bottom: 30px;
 }
+
 form {
     display: flex;
     justify-content: center;
