--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
     align-items: center;
     height: 100vh;
     background-color: #f0f0f0;
-    background: url('/FacedGod Assets/facedgodasset1.jpeg) no-repeat center center fixed;
+    background: url('FacedGod Assets/facedgodasset1.jpeg') no-repeat center center fixed;
     text-align: center;
 }
 .container {
